external-traffic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: 'worldtimeapi-org'
spec:
  hosts:
  - 'worldtimeapi.org'
  ports:
  - number: 80
    name: http
    protocol: HTTP
