virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            prefix: "/time"
      route:
        - destination:
            host: web-service
            port:
              number: 80
    - match:
        - uri:
            prefix: "/statistics"
      route:
        - destination:
            host: web-service
            port:
              number: 80
