forbid_ext.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-external-traffic
spec:
  podSelector: {}
  policyTypes:
  - Ingress
